--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Knewave&family=Mynerve&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Knewave&family=Mynerve&family=Poppins&display=swap");
 
 @tailwind base;
 @tailwind components;
